# disaster-relief-ai

./: Dockerfile  README.md  env.py  grader.py  index.html  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
